[package]
name = "radvent2018"
version = "0.1.0"
authors = ["Samuel Henrique <samuelhnrq@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.21"
env_logger = "0.7.0"
log = "0.4.8"
cursive = "0.13.0"
